--- a/docs/zavrsni.tex
+++ b/docs/zavrsni.tex
@@ -187,6 +187,9 @@ Bitcoin, nesumnjivo vodeća kriptovaluta današnjice, jedan je od jednostavnijih
 	\footnotetext{Forking ili račvanje je trenutak kada se još ne zna pravo stanje mreže zbog dvije stranice nastale u bliskom vremenskom okviru. To se relativno brzo razrješava rudarenjem već sljedeće stranice nakon jedne od njih}
 \end{enumerate}
 
+\subsection{O vremenu stranice u Bitcoin mreži}
+Pojam vrijeme stranice se odnosi na prosječno vrijeme koje protekne između rudarenja dvije uzastopne stranice u lancu. Bitcoin ima samo-podesivi mehanizam ugrađen u protokol koji brine da prosječno vrijeme za pronalaženje sažetka sljedeće stranice bude oko 10 minuta. Međutim, novi čvorovi nastaju u mreži, a neki postojeći se gase te stoga ukupna komputacijska snaga doživljava stalne fluktuacije. Rješenje za taj problem je da se broj zahtjevanih vodećih nul-bitova u bloku prilagođava obrnuto proporcionalno prosječnom vremenu mreže svakih 2016 stranica (što je okvirno 2 tjedna). Svaki rudar taj broj može nezavisno izračunati te prilagoditi svoj ciljani broj vodećih nul-bitova koje traži. Na taj način je osigurano približno konstantno vrijeme stranice.
+
 \section{Ispravnost tvrdnji u lancu stranica}
 Rudari moraju imati bazu podataka o povijesti lanca stranica te asocirane adrese uz javne ključeve za digitalne potpise transakcija\footnotemark. Također moraju pratiti nepotrošene izlaze transakcija. Sam bitcoin ne specificira implementaciju takvih baza podataka, no teži se korištenju što bolje optimizacije (indeksiranja) lanca kako bi rudari ostali kompetitivni s ostatkom mreže. Također postoje i čvorovi koji nude samo uslugu pretraživanja baze ili ogledala (mirroring). Primjerice, najpopularnija implementacija baze podataka za Bitcoin čvor koristi Google-ov LevelDB bazu podataka koja nudi brzi pristup disku u strukturi asocijativnog polja.
 \footnotetext{ Takozvani Full-Node je čvor koji čuva arhivu povijesti cijelog lanca u svrhu validiranja ispravnosti budućih transakcija, čuvanje javnih ključeva drugih korisnika za provjeravanje i izračunavanje }
@@ -203,9 +206,6 @@ Kako bi rudari imali interesa uopće uključivati transakcije i graditi Merkle s
 \subsection{Negativne strane dokaza rada}
 U teoretskom napadu\footnotemark od 51\% snage radi se upravo o tome da grupa koordiniranih zlonamjernih čvorova može zamrznuti ostale rudare od natjecanja za sljedeću stranicu. Kada bi se našla takva hipotetska organizacija, ništa ju ne bi moglo zaustaviti i ne postoji pravi način da se mreža zaštiti od takvog napada. Oni bi mogli generirati prazne stranice (što je potpuno legalno) te ih periodički propuštati ostatku mreže kako bi odustali od svojeg uzaludnog rada. Sav rad poštenih čvorova u mreži bio bi uzaludan i stranice bi bile važeće i prazne. Ovaj se napad najčešće zanemaruje zbog neizglednosti da će jedna organizacija ikad imati procesorsku većinu. Međutim, statistike pokazuju drugačije - distribucija računalne snage između koordiniranih rudarskih bazena je vrlo segregirana i postoji stvarna prijetnja od ovakvog napada. Mreža nije toliko decentralizirana koliko je bilo planirano.
 \footnotetext{51\% Attack...}
-
-\subsection{O vremenu stranice u Bitcoin mreži}
-Bitcoin ima samo-podesivi mehanizam ugrađen u protokol koji brine da je prosječno vrijeme za pronalaženje sažetka sljedeće stranice bude oko 10 minuta. Međutim, novi čvorovi nastaju u mreži, a neki postojeći se gase te stoga ukupna komputacijska snaga doživljava stalne fluktuacije. Rješenje za taj problem je da se broj zahtjevanih vodećih nul-bitova u bloku prilagođava obrnuto proporcionalno prosječnom vremenu mreže svakih 2016 stranica (što je okvirno 2 tjedna). Svaki rudar taj broj može nezavisno izračunati te prilagoditi svoj ciljani broj vodećih nul-bitova koje traži. Na taj način je osigurano približno konstantno vrijeme stranice. 
 
 \section{Dokaz uloga}
 Zbog neekonomičnosti mehanizma dokaza rada, koji izaziva veliko opterećenje računalnih sustava a posljedično i troši veliku količinu električne energije, javile su se nove metode postizanja suglasja u mrežama bez dokaza rada. Dokaz uloga\footnotemark \footnotetext{Proof of Stake...}
